# mafia_allocation

./: .gitignore  123.spec  CHANGELOG.md  main.py  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
mafia_allocation/: __init__.py  __main__.py  allocator.py
tests/: conftest.py  test_allocator.py
